testdata/typechecker/error/portfolio_ThisFunctionMethod.java
// Tests that 'this' method calls in functions error.

int main() {
    this.f();
    return 0;
}
